--- a/app/views/App/social.html
+++ b/app/views/App/social.html
@@ -1,9 +1,9 @@
 <aside>
 <h5>Social</h5>
-<ul class="social-list">
-  <li><a href="https://github.com/graetzer/" class="github" title="Simon Grätzer's' Github profile"></a></li>
-  <li><a href="https://twitter.com/ciron" class="twitter" title="Simon Grätzer's' Twitter profile"></a></li>
-  <li><a href="https://www.facebook.com/simon.graetzer" class="facebook" title="Simon Grätzer's' Facebook profile"></a></li>
-  <li><a href="https://plus.google.com/110906422094202892447" class="googleplus" title="Simon Grätzer's' Google+ profile"></a></li>
+<ul class="list-unstyled" id="social">
+  <li><a href="https://github.com/graetzer/" title="Simon Grätzer's' Github profile"><img src="/public/img/github.png" alt="Github" /></a></li>
+  <li><a href="https://twitter.com/ciron" title="Simon Grätzer's' Twitter profile"><img src="/public/img/twitter.png" alt="Twitter" /></a></li>
+  <li><a href="https://www.facebook.com/simon.graetzer" title="Simon Grätzer's' Facebook profile"><img src="/public/img/facebook.png" alt="Facebook" /></a></li>
+  <li><a href="https://plus.google.com/110906422094202892447" title="Simon Grätzer's' Google+ profile"><img src="/public/img/google+.png" alt="Google plus" /></a></li>
 </ul>
 </aside>
