--- a/app/views/App/trailer.html
+++ b/app/views/App/trailer.html
@@ -1,4 +1,4 @@
-<header role="banner">
+<header role="banner" class="row">
 <div class="jumbotron" id="trailer">
    <h1>Technical Notebook</h1>
    <p class="lead">Thoughts on iOS, Android, GoLang and more.</p>
