--- a/app/views/header.html
+++ b/app/views/header.html
@@ -12,13 +12,13 @@
 	<link rel="shortcut icon" type="image/png" href="/public/img/favicon.png" />
 	<link rel="alternate" type="application/rss+xml" title="Feed of Simon's blog" href="/feed.rss" />
 	
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/public/css/custom.css" />
 	<link rel="stylesheet" type="text/css" href="/public/css/highlight.css" />
     {{range .moreStyles}}<link rel="stylesheet" type="text/css" href="{{.}}" />{{end}}
 	
 	<script defer src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script defer src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	<script defer src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/7.3/highlight.min.js" onLoad="hljs.initHighlightingOnLoad()"></script>
 
     {{range .moreScripts}}<script src="{{.}}"></script>{{end}}
