--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -4,42 +4,42 @@
 <div class="row">
 	<div class="col-sm-11">
 	<main>
-	{{$user := .user}}
-	{{range .posts}}
-	<article>
-		<div class="panel panel-default">
-		  <div class="panel-heading">
-		    <h3 class="panel-title">{{.Title}}<small class="pull-right">{{datetime .UpdatedTime}}</small></h3>
-			<small>By {{.User.Name}}</small>
-			{{if eq $user.UserId .AuthorId}}
-				<a href="/admin/post/{{.PostId}}" title="Edit this Post">Edit</a>
-			{{end}}
-		  </div>
-		  <div class="panel-body">
-		    {{markdown .Body}}
-			
-			<p><a href="/post/{{.PostId}}/{{urlquery .Title}}#commentForm" title="Make a comment">
-			{{$count := commentCount .}}
-			{{if eq $count 0}}Comment on this article{{else}}
-			{{if eq $count 1}}One comment so far{{else}}
-			View all {{$count}} Comments{{end}}{{end}}</a></p>
-		  </div>
-		</div>
-	</article>
-	{{end}}
-	
-	{{/* Handling of next/back/empty */}}
-	{{if eq .offset 0 | not}}
-		<a href="/?offset={{ sub .offset 5}}">&laquo; Back</a>
-	{{end}}
-	{{if len .posts | eq 0}}
-		<h2>Oops!</h2>
-		<p>There seems to be no content here</p>
-	{{else}}
-		{{if len .posts | eq 5}}
-			<a href="/?offset={{add .offset 5}}">Next &raquo;</a>
+		{{$user := .user}}
+		{{range .posts}}
+		<article>
+			<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">{{.Title}}<small class="pull-right">{{datetime .UpdatedAt}}</small></h3>
+				<small>By {{username .UserId}}</small>
+				{{if eq $user.Id .UserId}}
+					<a href="/admin/post/{{.Id}}" title="Edit this Post">Edit</a>
+				{{end}}
+			  </div>
+			  <div class="panel-body">
+			    {{markdown .Body}}
+				
+				<p><a href="/post/{{.Id}}/{{urlquery .Title}}#commentForm" title="Make a comment">
+				{{$count := commentCount .}}
+				{{if eq $count 0}}Comment on this article{{else}}
+				{{if eq $count 1}}One comment so far{{else}}
+				View all {{$count}} Comments{{end}}{{end}}</a></p>
+			  </div>
+			</div>
+		</article>
 		{{end}}
-	{{end}}
+		
+		{{/* Handling of next/back/empty */}}
+		{{if eq .offset 0 | not}}
+			<a href="/?offset={{ sub .offset 5}}">&laquo; Back</a>
+		{{end}}
+		{{if len .posts | eq 0}}
+			<h2>Oops!</h2>
+			<p>There seems to be no content here</p>
+		{{else}}
+			{{if len .posts | eq 5}}
+				<a href="/?offset={{add .offset 5}}">Next &raquo;</a>
+			{{end}}
+		{{end}}
 	</main>
 	</div><!-- ./col-sm-11 -->
 	
