--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -11,8 +11,10 @@
 			  <div class="panel-heading">
 			    <h3 class="panel-title">{{.Title}}<small class="pull-right">{{datetime .UpdatedAt}}</small></h3>
 				<small>By {{username .UserId}}</small>
-				{{if eq $user.Id .UserId}}
-					<a href="/admin/post/{{.Id}}" title="Edit this Post">Edit</a>
+				{{if $user}}
+					{{if and $user (eq $user.Id .UserId)}}
+						<a href="/admin/post/{{.Id}}" title="Edit this Post">Edit</a>
+					{{end}}
 				{{end}}
 			  </div>
 			  <div class="panel-body">
