--- a/app/views/App/social.html
+++ b/app/views/App/social.html
@@ -1,6 +1,6 @@
-<aside>
+<aside id="social">
 <h5>Social</h5>
-<ul class="list-unstyled" id="social">
+<ul class="list-unstyled">
   <li><a href="https://github.com/graetzer/" title="Simon Grätzer's' Github profile"><img src="/public/img/github.png" alt="Github" /></a></li>
   <li><a href="https://twitter.com/ciron" title="Simon Grätzer's' Twitter profile"><img src="/public/img/twitter.png" alt="Twitter" /></a></li>
   <li><a href="https://www.facebook.com/simon.graetzer" title="Simon Grätzer's' Facebook profile"><img src="/public/img/facebook.png" alt="Facebook" /></a></li>
