--- a/app/views/header.html
+++ b/app/views/header.html
@@ -17,9 +17,9 @@
 	<link rel="stylesheet" type="text/css" href="/public/css/highlight.css" />
     {{range .moreStyles}}<link rel="stylesheet" type="text/css" href="{{.}}" />{{end}}
 	
-	<script defer src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	<script defer src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/7.3/highlight.min.js" onLoad="hljs.initHighlightingOnLoad()"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
     {{range .moreScripts}}<script src="{{.}}"></script>{{end}}
 	<script type="text/javascript">
