--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,7 +1,6 @@
 /* Copyrigth Simon Peter Grätzer simon(at)graetzer.org */
 
 body {background:url('../img/cream_pixels.png');}
-
 #trailer {
 	background:url('../img/trailer.png') no-repeat;
 	background-size: auto 100%;
@@ -11,7 +10,7 @@ footer {
 	background-color: #F8F8F8;
 	border: 1px solid #E7E7E7;
 	border-radius: 4px;
-	padding: 10px 0;
+	padding: 5px 10px;
 }
 .panel-body img {
 	max-width:100%;
@@ -19,11 +18,14 @@ footer {
 .table tbody > tr > td {
 	vertical-align:middle !important;
 }
-#editorACE {height:450px;}
+#editorACE {height:560px;}
 #editorPreview {
-	height:550px;
+	height:600px;
 	overflow:auto;
 }
-#social li {
+#social {
+	margin-left:25px
+}
+#social ul li {
 	padding: 7px 0;
 }
