--- a/app/views/App/Post.html
+++ b/app/views/App/Post.html
@@ -30,8 +30,8 @@
 {{if not .post.IsPage}}
 <section>
 <div class="row">
-	<div class="col-sm-4">
-		<h3>Leave a comment</h3>
+	<div class="col-sm-3">
+		<h4>Leave a comment</h4>
 		<form id="commentForm" role="form" method="POST" action="/post/comment/{{.post.Id}}">
 		  <div class="form-group {{if .errors.name}}has-error{{end}}">
 		    <label for="inputName">Name</label>
@@ -69,14 +69,14 @@
 	</div>
 	
 	{{if .comments}}
-	<div class="col-sm-7">
-		<h3>Comments ({{len .comments}})</h3>
+	<div class="col-sm-8">
+		<h4>Comments ({{len .comments}})</h4>
 		{{range .comments}}
 			<div class="panel panel-warning">
 			  <div class="panel-heading">
-			    <h3 class="panel-title">{{.Title}}
-				<small class="pull-right">{{datetime .CreatedTime}}</small>
-				</h3>
+			    <h4 class="panel-title">{{.Title}}
+				<small class="pull-right">{{datetime .CreatedAt}}</small>
+				</h4>
 				<small>By {{with .Name}}{{.}}{{else}}Anonymous{{end}}</small>
 			  </div>
 			  <div class="panel-body">
