--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -15,7 +15,7 @@
     <ul class="nav navbar-nav">
       {{$current := .post}}
 	  {{range .pages}}
-	     <li {{if eq $current.PostId .PostId}}class="active"{{end}}><a href="/post/{{.PostId}}/{{urlquery .Title}}">{{.Title}}</a></li>
+	     <li {{if eq $current.Id .Id}}class="active"{{end}}><a href="/post/{{.Id}}/{{urlquery .Title}}">{{.Title}}</a></li>
 	  {{end}}
 	      
 	  {{if .user}}
