--- a/app/views/Admin/Media.html
+++ b/app/views/Admin/Media.html
@@ -33,7 +33,7 @@
 					<td>{{.Size}} Bytes</td>
 					<td>
 						<a title="View this file" href="/public/uploads/{{urlquery .Name}}" class="btn btn-primary btn-sm">View</a>
-						<a title="Delete this file" href="/admin/uploads/delete/{{urlquery .Name}}" class="btn btn-danger btn-sm">Delete</a>
+						<a title="Delete this file" href="/admin/media/{{urlquery .Name}}/delete" class="btn btn-danger btn-sm">Delete</a>
 					</td>
 				</tr>
 				{{end}}
