--- a/app/views/Admin/Media.html
+++ b/app/views/Admin/Media.html
@@ -61,7 +61,7 @@
 						'<td>'+file.name+'</td>'+
 						'<td>'+file.size+' Bytes</td>'+
 						'<td><a title="View this file" href="/public/uploads/'+enc+'" class="btn btn-primary btn-sm">View</a> '+
-						'<a title="Delete this file" href="/admin/uploads/delete/'+enc+'" class="btn btn-danger btn-sm">Delete</a></td>'+
+						'<a title="Delete this file" href="/admin/media/'+enc+'/delete" class="btn btn-danger btn-sm">Delete</a></td>'+
 						'</tr>');
 					});
 				}
