--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -45,7 +45,7 @@
 	</main>
 	</div><!-- ./col-sm-11 -->
 	
-	<div class="col-xs-1">
+	<div class="col-xs-12 col-sm-1">
 	{{template "App/social.html" .}}
 	</div>
 </div><!-- /.row -->
