--- a/app/views/App/social.html
+++ b/app/views/App/social.html
@@ -3,6 +3,6 @@
   <li><a href="https://github.com/graetzer/" title="Simon Grätzer's' Github profile"><img src="/public/img/github.png" alt="Github" /></a></li>
   <li><a href="https://twitter.com/ciron" title="Simon Grätzer's' Twitter profile"><img src="/public/img/twitter.png" alt="Twitter" /></a></li>
   <li><a href="https://www.facebook.com/simon.graetzer" title="Simon Grätzer's' Facebook profile"><img src="/public/img/facebook.png" alt="Facebook" /></a></li>
-  <li><a href="https://plus.google.com/110906422094202892447" title="Simon Grätzer's' Google+ profile"><img src="/public/img/google+.png" alt="Google plus" /></a></li>
+  <li><a href="https://instagram.com/sgraetzer" title="Instagram profile"><img src="/public/img/instagram.png" alt="Instagram" /></a></li>
 </ul>
 </aside>
