--- a/app/views/Admin/Projects.html
+++ b/app/views/Admin/Projects.html
@@ -29,7 +29,7 @@
         <tr>
           <td>{{.Title}}</td>
           <td>{{datetime .UpdatedAt}}</td>
-          <td><img src="{{.ImageUrl}}" alt="Project Logo"></td>
+          <td><img src="{{.CoverUrl}}" alt="Project Logo"></td>
           <td>{{.Tags}}</td>
           {{if eq $user.IsAdmin}}
           <td>
