--- a/app/views/App/Projects.html
+++ b/app/views/App/Projects.html
@@ -12,7 +12,7 @@
 						</h3>
 					</div>
 					<div class="panel-body">
-						<img src="{{.ImageUrl}}" alt="Project Logo" class="img-circle" />
+						<img src="{{.CoverUrl}}" alt="Project Logo" class="img-circle" />
 						<p>{{.Description}}</p>
 						<a href="{{.RepoUrl}}" title="Make a comment">Repository</a>
 					</div>
