--- a/app/views/Admin/EditProject.html
+++ b/app/views/Admin/EditProject.html
@@ -16,23 +16,23 @@
 </div>
 <div class="row">
 	<div class="col-sm-2">
-		{{ set . "pp" 5}}
+		{{ set . "pp" 4}}
 		{{template "Admin/adminMenu.html" .}}
 	</div>
 	<div class="col-sm-8">
 		<h3>{{.title}}</h3>
-		<form role="form" method="POST" action="/admin/project/{{.project.Id}}">
+		<form role="form" method="POST" action="/admin/projects/{{.project.Id}}">
 			<div class="form-group">
 				<label for="inputTitle">Title</label>
 				<input type="text" class="form-control" id="inputTitle" name="project.Title" placeholder="Uberproduct" value="{{.project.Title}}" />
 			</div>
 			<div class="form-group">
 				<label for="inputImage">Image URL</label>
-				<input type="text" class="form-control" id="inputImage" name="project.ImageURL" placeholder="http://..." value="{{.project.ImageURL}}" />
+				<input type="text" class="form-control" id="inputImage" name="project.CoverUrl" placeholder="http://..." value="{{.project.CoverUrl}}" />
 			</div>
 			<div class="form-group">
 				<label for="inputRepo">Repo URL</label>
-				<input type="text" class="form-control" id="inputRepo" name="project.RepoURL" placeholder="http://..." value="{{.project.RepoURL}}" />
+				<input type="text" class="form-control" id="inputRepo" name="project.RepoUrl" placeholder="http://..." value="{{.project.RepoUrl}}" />
 			</div>
 			<div class="form-group">
 				<label for="inputTags">Tags</label>
