--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -15,7 +15,7 @@
     <ul class="nav navbar-nav">
       <!--<li><a href="/about">About</a></li>-->
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/locations">Location</a></li>
+      <li><a href="/live">Live</a></li>
   	  {{if .user}}
   	  <li><a href="/admin">Admin Panel</a></li>
   	  {{end}}
